添加--医案 点击收起

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -1158,13 +1158,13 @@ $(window).bind("scroll", function() {
 	window.onload = function(){
 		// 点击收起放到最上边--不然影响其他事件
 		// 医案  收起
-		$(".consilia_nav_btn").toggle(function(){
+		/*$(".consilia_nav_btn").toggle(function(){
 	    	$(".consilia_nav_btn span").html('收起');
 		    $(".consilia_nav_main").removeClass("add");
 	  	},function(){
 		    $(".consilia_nav_btn span").html('展开');
 		    $(".consilia_nav_main").addClass("add");
-	    });
+	    });*/
 
 	    // 其他二收起
 	    /*$(".essay_pack_up_btn").toggle(function(){
