--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -53,7 +53,7 @@
                 <img src="{{coverImg}}" alt=""/> <!-- 此图是从上一页专题图的封面图 -->
             </div>
             <!--  <div class="intro_top" onclick="location.href='/xcview/html/apprentice/apprentice.html'">  -->
-            <div class="intro_top" onclick="common_share_back();">
+            <div class="intro_top" onclick="share_back();">
                 <div class="intro_top_bg"></div>
                 <img src="/xcview/images/anchorj.png" alt=""/>
             </div>
@@ -185,7 +185,7 @@
 
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 <!-- 分享引入 -->
-<script type="text/javascript" src="/xcview/js/apprentice/inherited_introduction.js?v=wechat_1.1.24"></script>
+<script type="text/javascript" src="/xcview/js/apprentice/inherited_introduction.js?v=0706"></script>
 <script type="text/javascript" src="/xcview/js/share/share.js?v=wechat_1.1.3"></script>
 
 <script>
