关键词修改。。

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -308,6 +308,9 @@
 	.am-pureview-bar-active .am-pureview-actions, .am-pureview-bar-active .am-pureview-bar{
 		/*opacity: 0;*/
 	}
+	#form_article{
+		color: #333 !important;
+	}
 </style>
 
 </head>
