视频点击隐藏背景图。搜索修改遮挡。，大纲修改中---

--- a/wechat/src/main/webapp/xcview/html/course_outline.html
+++ b/wechat/src/main/webapp/xcview/html/course_outline.html
@@ -14,7 +14,8 @@
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
 <!-- 网页自适应JS代码引入 -->
-<script src="/xcview/js/js.js"></script>
+<!--手机嵌入模板-->
+<script type="text/javascript" src="/xcview/js/common/layout.js?version=e2b9d5cdbd"></script>
 
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script><!--滑动引入js-->
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
