--- a/wechat/src/main/webapp/xcview/html/outline_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/outline_fragment.html
@@ -13,8 +13,8 @@
 
 <!--这段meta代码需要加上，移动端自适应缩放用-->
 <!--这段JS就是自动检测窗口尺寸大小的，动态改变html的font-size的大小-->
-<!-- 网页自适应JS代码引入 -->
-<script src="/xcview/js/js.js"></script>
+<!--手机嵌入模板-->
+<script type="text/javascript" src="/xcview/js/common/layout.js?version=e2b9d5cdbd"></script>
 
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script><!--滑动引入js-->
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
@@ -33,14 +33,7 @@
 	    }
 	}	
 </script>
-<style>
-	.outline{
-		width: 100% !important;
-	}
-	.outline_list{
-		width: 14.954rem !important;
-	}
-</style>
+
 </head>
 <body style="background: #F8F8F8;">
 	<!--中间内容开始-->
@@ -51,12 +44,12 @@
 			<div class="outline_cen">
 				<div class="outline_cen_left">
 					<img src="../images/outline_bg.png" />
-					共<span>{{courseNumber}}</span>集<!--已更新<span>16</span>集-->
+					共{{courseNumber}}集，已更新{{dirtyNumber}}集 
 				</div>
-				<!--<div class="outline_cen_right">
+				<div class="outline_cen_right">
 					<img src="../images/time_bg0.png" />
-					每周<span>一三五</span>更新
-				</div>-->
+					每{{dirtyDate}}更新
+				</div>
 				<div class="both"></div>
 			</div>
 			</script>
