医案关键字删除

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -548,9 +548,10 @@
 						<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 						{{/if}}
 						
-						<div class="title"><span class="stick_imgs">#医案#</span>{{item.content}}</div>
+						<div class="title"><span class="stick_imgs" style="display: none !important;">#医案#</span>{{item.content}}</div>
 						<div class="both"></div>
 					</div>
+
 					<div class="both"></div>
 					<div class="consilia_nav_btn"><span>展开</span></div>
 					<div class="consilia_nav_cen" data-id="{{item.articleId}}" style="display: block;">
