师承--修改ios物理返回。。媒体报道新ui修改

--- a/wechat/src/main/webapp/xcview/html/apprentice/recruit.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/recruit.html
@@ -16,7 +16,7 @@
 	<!-- 报名头部开始 -->
 	<header>
 		<div class="header">
-			<div class="return" onclick="javascript:history.go(-1);"><img src="/xcview/images/back icon.png" alt="" /></div>
+			<div class="return" onclick="location.href='/xcview/html/apprentice/inherited_introduction.html'"><img src="/xcview/images/back icon.png" alt="" /></div>
 			<div class="apply_title">招徒简章全文</div>
 		</div>
 		
@@ -34,6 +34,25 @@
 	</div>
 	
 	<!-- 中间内容结束 -->
+	<script> 
+	// 控制手机物理键--返回
+	window.onload = function(){
+	  	if(window.history && window.history.pushState) {  
+	      	$(window).on('popstate', function() {  
+	          	var hashLocation = location.hash;  
+	          	var hashSplit = hashLocation.split("#!/");  
+	          	var hashName = hashSplit[1];  
+	          	if(hashName !== '') {  
+	              	var hash = window.location.hash;  
+	              	if(hash === '') {  
+	                  	location.href ='/xcview/html/apprentice/inherited_introduction.html'  	/*跳转链接*/
+	              	}  
+	          	}  
+	      	});  
+	      	window.history.pushState('forward', null, './recruit.html');    //引号里写当前页面地址,刷新当前页'	./inherited_introduction.html'
+	  	}
+	};
+	</script> 
 </body>
 <!-- 中间内容结束 -->
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
