--- a/wechat/src/main/webapp/xcview/html/physician/article.html
+++ b/wechat/src/main/webapp/xcview/html/physician/article.html
@@ -39,7 +39,7 @@
 	<header>
 		<div class="header">
 			<div class="headers">
-				<p>文章</p>
+				<p>媒体报道</p>
 			</div>
 <!-- 			<div class="arror_return" onclick="javascript:window.history.back();return false;"> -->
             <div class="arror_return" onclick="common_share_back();">
@@ -74,17 +74,18 @@
 			<h2>{{items.title}}</h2>
 			<div class="article">
 				<div class="article_main">
-					<div class="article_border_left"></div>
+					<!--<div class="article_border_left"></div>-->
 					<div class="article_time">
 						<div class="">{{items.author}}</div>
 					</div>
-					<div class="article_border_right"></div>
+					<!--<div class="article_border_right"></div>-->
 					<div class="both"></div>
 				</div>
 			</div>
 			<div class="both"></div>
 			<div class="consilia_center">
 				<div class="consilia_textarea"></div>
+				<div class="consilia_center_url">本文来源：<span></span>。转载请注明出处。</div>
 			</div>
 			</script>
 		</div>
