--- a/wechat/src/main/webapp/xcview/html/apprentice/apply.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/apply.html
@@ -121,6 +121,7 @@
 		</div>
 	<!-- 点击学历出现弹窗结束 -->
 	<!-- 中间内容结束 -->
+
 </body>
 <script type="text/javascript" src="/xcview/js/common/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js"></script>
@@ -128,5 +129,24 @@
 <script type="text/javascript" src="/xcview/js/apprentice/apprentice-common.js"></script>
 <script type="text/javascript" src="/xcview/js/common/alertPopShow.js"></script>
 <script type="text/javascript" src="/xcview/js/apprentice/apply.js"></script>
+<script> 
+	// 控制手机物理键--返回
 
+	window.onload = function(){
+	  	if(window.history && window.history.pushState) {  
+	      	$(window).on('popstate', function() {  
+	          	var hashLocation = location.hash;  
+	          	var hashSplit = hashLocation.split("#!/");  
+	          	var hashName = hashSplit[1];  
+	          	if(hashName !== '') {  
+	              	var hash = window.location.hash;  
+	              	if(hash === '') {  
+	                  	location.href ='/xcview/html/apprentice/inherited_introduction.html'  	/*跳转链接*/
+	              	}  
+	          	}  
+	      	});  
+	      	window.history.pushState('forward', null, './apply.html');    //引号里写当前页面地址,刷新当前页'	./inherited_introduction.html'
+	  	}
+	};
+	</script>
 </html>
