--- a/wechat/src/main/webapp/xcview/html/apprentice/review_linchaodao_1.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/review_linchaodao_1.html
@@ -16,7 +16,7 @@
 	<header>
 		<div class="header">
 			<div class="return" onclick="location.href='/xcview/html/apprentice/inherited_introduction.html'"><img src="/xcview/images/back%20icon.png" alt="" /></div>
-			<div class="apply_title">往期回顾</div>
+			<div class="apply_title">超岱I期学员风采</div>
 		</div>
 	</header>
 	<!-- 往期回顾头部结束 -->
@@ -25,7 +25,7 @@
 		<div class="main">
 			<div class="opacity_height"></div>
 			<div class="students">
-				<div class="students_title">超岱I期学员风采</div>
+				<div class="students_title"></div>
 				<div class="students_video">
 					<div class="students_video_view"><script src="https://p.bokecc.com/player?vid=0ACA66F7620F13389C33DC5901307461&siteid=B5E673E55C702C42&autoStart=false&width=320&height=195&playerid=E92940E0788E2DAE&playertype=1&img_path=http://test-file.ipandatcm.com/18508151154/8f70fa923845-2c9aec356231d035016231eb7b0b00001525763514047.png" type="text/javascript"></script></div>
 				</div>
