--- a/wechat/src/main/webapp/xcview/html/outline_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/outline_fragment.html
@@ -48,7 +48,7 @@
 				</div>
 				<div class="outline_cen_right">
 					<img src="../images/time_bg0.png" />
-					每{{dirtyDate}}更新
+					{{dirtyDate}}
 				</div>
 				<div class="both"></div>
 			</div>
