--- a/wechat/src/main/webapp/xcview/html/article_fragment.html
+++ b/wechat/src/main/webapp/xcview/html/article_fragment.html
@@ -1,83 +1,94 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<!--<title>消费明细</title>-->
-<title>熊猫中医</title>
-<!--这段meta代码需要加上，移动端自适应缩放用-->
-<meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-<meta name="keywords" content="" />
-<meta name="description" content="" />
-<link rel="stylesheet" href="../css/animate.css" />
-<link rel="stylesheet" href="../css/live_personal.css" />
-<link rel="stylesheet" href="../css/share/share.css" />
-<link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=31c81b486a&version=31c81b486a">
-<!--手机嵌入模板-->
-<script type="text/javascript" src="/xcview/js/common/layout.js?version=facf12d94f"></script>
-<style type="text/css">
-	#ccvideo table{
-		width: 100% !important;
-	}
-	#ccvideo{
-		margin-top: 0.1rem;
-	}
-	.wrap_vedio{
-		    
-	}
-	#wp{
-		width: 7.5rem;
-		margin: 0 auto;
-		position: relative;
-		/*overflow: hidden;*/
-	}
-	.wrap_vedio{
-		padding: 0rem 0.26rem;
-		padding-bottom: 0.2rem;
-		margin-top: 0;
-	}
-	.user_mywrite{
-		margin-top:0;
-		line-height: 0.42rem;
-	}
-	.user_mywrite p{
-		line-height: 0.42rem !important;
-	}
-	.user_mywrite div{
-		line-height: 0.4rem;
-	}
-	.both{
-		clear: both;
-	}
-	.no{
-		width: 100%;
-		height: 1rem;
-		line-height: 1rem;
-		text-align: center;
-		font-size: 0.28rem;
-		display: none;
-		background: #fff;
-		color: #bbb;
-	}
-	.no_referral{
-		width: 100%;
-		height: 1rem;
-		line-height: 1rem;
-		/*text-align: center;*/
-		font-size: 0.28rem;
-		display: none;
-		color: #bbb;
-		background: #fff;
-		text-indent: 0.4rem;
-	}
+    <meta charset="utf-8">
+    <!--<title>消费明细</title>-->
+    <title>熊猫中医</title>
+    <!--这段meta代码需要加上，移动端自适应缩放用-->
+    <meta name="viewport" content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
+    <link rel="stylesheet" href="../css/animate.css"/>
+    <link rel="stylesheet" href="../css/live_personal.css"/>
+    <link rel="stylesheet" href="../css/share/share.css"/>
+    <link rel="stylesheet" href="/xcview/css/alert/sharecss.css?version=31c81b486a&version=31c81b486a">
+    <!--手机嵌入模板-->
+    <script type="text/javascript" src="/xcview/js/common/layout.js?version=facf12d94f"></script>
+    <style type="text/css">
+        #ccvideo table {
+            width: 100% !important;
+        }
 
-</style>
+        #ccvideo {
+            margin-top: 0.1rem;
+        }
+
+        .wrap_vedio {
+
+        }
+
+        #wp {
+            width: 7.5rem;
+            margin: 0 auto;
+            position: relative;
+            /*overflow: hidden;*/
+        }
+
+        .wrap_vedio {
+            padding: 0rem 0.26rem;
+            padding-bottom: 0.2rem;
+            margin-top: 0;
+        }
+
+        .user_mywrite {
+            margin-top: 0;
+            line-height: 0.42rem;
+        }
+
+        .user_mywrite p {
+            line-height: 0.42rem !important;
+        }
+
+        .user_mywrite div {
+            line-height: 0.4rem;
+        }
+
+        .both {
+            clear: both;
+        }
+
+        .no {
+            width: 100%;
+            height: 1rem;
+            line-height: 1rem;
+            text-align: center;
+            font-size: 0.28rem;
+            display: none;
+            background: #fff;
+            color: #bbb;
+        }
+
+        .no_referral {
+            width: 100%;
+            height: 1rem;
+            line-height: 1rem;
+            /*text-align: center;*/
+            font-size: 0.28rem;
+            display: none;
+            color: #bbb;
+            background: #fff;
+            text-indent: 0.4rem;
+        }
+
+    </style>
 
 </head>
 <body style="background:#F8F8F8;">
 <div id="wp">
-	<div class="wrap_vedio" id="jieshao">
-		<div class="user_mywrite" id="aaaaa"></div>	
-	</div>
+    <div class="wrap_vedio" id="jieshao">
+        <div class="user_mywrite" id="aaaaa"></div>
+        <div class="consilia_center_url" style="color: #999999;display: none;margin-top: 10px"></div>
+    </div>
 </div>
 <script src="/xcview/weihoujs/jquery.min.js"></script>
 <script type="text/javascript" src="/xcview/js/common/mui.min.js?v=11111111"></script>
