--- a/wechat/src/main/webapp/xcview/html/physician/article.html
+++ b/wechat/src/main/webapp/xcview/html/physician/article.html
@@ -85,7 +85,7 @@
 			<div class="both"></div>
 			<div class="consilia_center">
 				<div class="consilia_textarea"></div>
-				<div class="consilia_center_url">本文来源：<span></span>。转载请注明出处。</div>
+				<div class="consilia_center_url"></div>
 			</div>
 			</script>
 		</div>
