修改师承页面

--- a/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
+++ b/wechat/src/main/webapp/xcview/html/apprentice/inherited_introduction.html
@@ -119,37 +119,37 @@
         </div>
 
         <!-- 学习时间开始 -->
-        <div class="flow">
-            <div class="flow_title">
-                <p class="border"></p>
-                <p class="title">报名截止时间</p>
-                <div class="both"></div>
-            </div>
-            <div class="flow_center learningProcess">
-                {{deadline}}
-            </div>
+        <!--<div class="flow">-->
+            <!--<div class="flow_title">-->
+                <!--<p class="border"></p>-->
+                <!--<p class="title">报名截止时间</p>-->
+                <!--<div class="both"></div>-->
+            <!--</div>-->
+            <!--<div class="flow_center learningProcess">-->
+                <!--{{deadline}}-->
+            <!--</div>-->
             <!-- 学习时间结束 -->
             <!-- 学习时间开始 -->
-            <div class="flow">
-                <div class="flow_title">
-                    <p class="border"></p>
-                    <p class="title">学习时间</p>
-                    <div class="both"></div>
-                </div>
-                <div class="flow_center learningProcess">
-                    {{startTime}}至{{endTime}}
-                </div>
+            <!--<div class="flow">-->
+                <!--<div class="flow_title">-->
+                    <!--<p class="border"></p>-->
+                    <!--<p class="title">学习时间</p>-->
+                    <!--<div class="both"></div>-->
+                <!--</div>-->
+                <!--<div class="flow_center learningProcess">-->
+                    <!--{{startTime}}至{{endTime}}-->
+                <!--</div>-->
                 <!-- 学习时间结束 -->
                 <!-- 学习地址开始 -->
-                <div class="flow">
-                    <div class="flow_title">
-                        <p class="border"></p>
-                        <p class="title">学习地址</p>
-                        <div class="both"></div>
-                    </div>
-                    <div class="flow_center learningProcess">
-                        {{studyAddress}}
-                    </div>
+                <!--<div class="flow">-->
+                    <!--<div class="flow_title">-->
+                        <!--<p class="border"></p>-->
+                        <!--<p class="title">学习地址</p>-->
+                        <!--<div class="both"></div>-->
+                    <!--</div>-->
+                    <!--<div class="flow_center learningProcess">-->
+                        <!--{{studyAddress}}-->
+                    <!--</div>-->
                     <!-- 学习地址结束 -->
 
 
