修改刷新后--隐藏固定事件

--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -57,10 +57,10 @@
 
 <style>
 	.physicians_page_mains {
-		position: fixed;
+		/* position: fixed;
 		top: 0;
 		left: 50%;
-		margin-left: -3.75rem;
+		margin-left: -3.75rem; */
 	}
 	.mui-pull-bottom-pocket .mui-pull{
 		bottom: -0.8rem !important;
