--- a/online-web/src/main/webapp/web/html/anchor/curriculum.html
+++ b/online-web/src/main/webapp/web/html/anchor/curriculum.html
@@ -2600,15 +2600,47 @@
 					</div>
 					<div class="name workTime" >
 						<span>坐诊时间</span>
-					<ul style="display: inline-block;vertical-align: middle;" id="u_workTime">
-						<li >一</li>
-						<li>二</li>
-						<li>三</li>
-						<li>四</li>
-						<li>五</li>
-						<li>六</li>
-						<li>日</li>
-					</ul>
+						<!--<ul style="display: inline-block;vertical-align: middle;" id="u_workTime">
+							<li >一</li>
+							<li>二</li>
+							<li>三</li>
+							<li>四</li>
+							<li>五</li>
+							<li>六</li>
+							<li>日</li>
+						</ul>-->
+						<table cellspacing="0" cellpadding="0">
+								<tr>
+									<th></th>
+									<th>周一</th>
+									<th>周二</th>
+									<th>周三</th>
+									<th>周四</th>
+									<th>周五</th>
+									<th>周六</th>
+									<th>周日</th>
+								</tr>
+								<tr>
+									<td>上午</td>
+									<td><p><img class="hide" data-type = "1.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "2.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "3.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "4.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "5.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "6.1" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "7.1" src="/web/images/right_15.png"/></p></td>
+								</tr>
+								<tr>
+									<td>下午</td>
+									<td><p><img class="hide" data-type = "1.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "2.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "3.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "4.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "5.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "6.2" src="/web/images/right_15.png"/></p></td>
+									<td><p><img class="hide" data-type = "7.2" src="/web/images/right_15.png"/></p></td>
+								</tr>
+							</table>
 					<p class="warning return_warning7 hide">请选择坐诊时间</p>
 					</div>
 					
