修改跳转医师页面

--- a/wechat/src/main/webapp/xcview/html/home_page.html
+++ b/wechat/src/main/webapp/xcview/html/home_page.html
@@ -189,7 +189,7 @@
 					            <div class="swiper-slide">  <!--滑动备注  添加里面-->
 					            	
 					            	<div class="teacher_slider_ul_div teacherRecommend" data-jump="{{item.userId}}">
-					            		<a style="color: #333;" href="/xcview/html/live_personal.html?userLecturerId={{item.userId}}">
+					            		<a style="color: #333;" href="/xcview/html/physician/physicians_page.html?doctor={{item.userId}}">
                     						<img src="{{item.headPortrait}}?imageView2/2/w/72" />
                     						<span style="font-size: 0.22rem;">{{item.name}}</span>
                     					</a>
