--- a/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
+++ b/wechat/src/main/webapp/xcview/html/physician/physicians_page.html
@@ -127,6 +127,9 @@
 		.am-pureview-bar-active .am-pureview-actions, .am-pureview-bar-active .am-pureview-bar{
 			/*opacity: 0;*/
 		}
+		.am-pureview{
+			z-index: 999999;
+		}
 	</style>
 
 <script>
@@ -481,11 +484,12 @@
 				<div class="both"></div>
 				{{else if item.type == 3}}
 				<!-- 视频-->
-				<div class="rests_nav_span comment_hide" style="padding-bottom: 0.2rem;">
+				<div class="rests_nav_span comment_hide">
 					{{if item.stick}}
 					<span class="stick_img"><img src="/xcview/images/stick.png" alt="" />置顶</span>
 					{{/if}}
 					<span class="title">{{item.title}}</span>
+					<div class="both"></div>
 				</div>
 				<div class="ccvideo_div">
 					<div id="ccvideo{{item.id}}" class="comment_hide ccvideo">
@@ -531,7 +535,7 @@
 						<div class="course_nav_rate"><span>{{item.currentPrice}}</span>熊猫币</div>
 						{{/if}}
 						{{if item.courseType==3}}
-						<div class="course_nav_cen_size">{{item.startTime}}</div>
+						<div class="course_nav_cen_size" style="margin-top: 0;">{{item.startTime}}</div>
 						{{/if}}
 						{{if item.courseType==4}}
 						<div class="course_nav_cen_size"><img src="/xcview/images/location_four.png" style="width: 0.19rem;height: 0.24rem;float: left;margin-right: 0.1rem; margin-top: 0.06rem;" />{{item.courseAddress}}</div>
